--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,15 @@
-- scene reload
+
+
 
 - terrain refactor
+- terrain gizmo
+- vertex paint
+
+
+
+- scene reload
+
+
 - mesh collision general
 - concepts for types :D
 - widget list refactor (only update the visible region)
