shadows working again

--- a/todo.txt
+++ b/todo.txt
@@ -1,16 +1,13 @@
+- commands
 - stiching (+color stiching)
-- shadow fix
 - global input mapping!
+- shadow and general pipeline synopsis (instance draw)
+- refactor all shaders
 
 - input mode (enum class) refactor
-- fall off
-- face normal and color in shader
-- commands
 - shader material data rework
 - matrix rework with concepts
 - utils sparation into multiple headers
-
-
 
 - scene reload
 - widget list refactor (only update the visible region)
@@ -21,3 +18,6 @@
 - better grass
 - load both material and mesh paths externally
 - FOR_ENUM_MAP macro for loop
+- appropriate color picker widget
+
+- don't xcopy whole shader folder (glsl sources) but only spv
