--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,12 @@
+- shadow cascade fade
+- commands
+
+
+
 
 - recalculate props height on terrain when terrain recalculated??
-
 - test against all quadrant and choose closest
-- command refactor
+
 - global input mapping!
 - shadow and general pipeline synopsis (instance draw)
 - refactor all shaders
@@ -17,7 +21,6 @@
 - widget list refactor (only update the visible region)
 - simple function ptr based system for gui callback
 (since updating the scene tree every frame is wasteful)
-- shadow cascade fade
 - cast shadow flag 
 - better grass
 - load both material and mesh paths externally
